# 3d_hw2

./: CMakeLists.txt  README.md  definitions.h  geomtools.cpp  geomtools.h  main.cpp  notes.md
data/: 2b.city.json  cube.city.json
src/: definitions.h  geomtools.cpp  geomtools.h  main.cpp
