cmake_minimum_required(VERSION 3.20)
project(hw02)
set(CMAKE_CXX_STANDARD 14)
set(BOOST_ROOT "C:/dev/boost")
include_directories( ${CMAKE_SOURCE_DIR}/include/ )
find_package(CGAL PATHS "C:/Program Files (x86)/CGAL")
FILE(GLOB SRC_FILES src/*.cpp)
add_executable(hw02 ${SRC_FILES})
target_link_libraries(hw02 CGAL::CGAL)